<resources>
    <string name="app_name">销邦盘点</string>
    <string name="date_settings">日期时间设置</string>
    <string name="corp_style">企业类型</string>
    <string name="corp_choice">请选择企业类型</string>
    <string name="ok">确定</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="go">直接进入</string>
    <string name="resume">重新选择</string>
    <string name="back">返回</string>
    <string name="submit">确认</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="reselect">重选</string>
    <string name="hint_text">请输入条码</string>
    <string name="exit">系统退出</string>
    <string name="pass_admin">请输入管理员密码：</string>
    <string name="data_select">请选择更新的基础数据</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">销邦科技，欢迎您！</string>
    <string name="bill_no">单        号:</string>
    <string name="unit">往来单位:</string>
    <string name="med_type">药品类型：</string>
    <string name="scan_num">已扫描：</string>
    <string name="build">新建</string>
    <string name="message">信息</string>
    <string name="communicate">通讯</string>
    <string name="allbill">全部出入库单</string>
    <string name="selelect_ordertype">请选择单据类型</string>
    <string name="selelect_returncause">请选择退货原因</string>
    <string name="selelect_papertype">请选择证件类型</string>
    <string name="query">搜索</string>
    <string name="loading">正在加载数据,请稍候......</string>
    <string name="input_bill_number">请输入单号</string>
    <string name="dialog_title">提示</string>
    <string name="delete_success">删除成功！</string>
    <string name="delete_fail">删除失败！</string>
    <string name="setting">设置</string>
    <string name="upload">上传</string>
    <string name="clear">清除</string>
    <string name="no_choose">没有选择</string>
    <string name="choosed">已经选择</string>
    <string name="cannot_move">不可移动</string>
    <string name="notification">操作提示 </string>
    <string name="test">基础资料中无此条码,是否录入?</string>
    <string name="system_update">系统升级</string>
    <string name="update_setting">升级配置</string>
    <string name="updating">执行更新</string>
    <string name="version">当前版本号</string>
    <string name="update_url">更新URL地址</string>
    <string name="enterprise_id">企业ID</string>
    <string name="update_prompt">更新下载文件前是否提示</string>
    <string name="main_app">主程序</string>
    <string name="main_app_launch">主程序为更新成功后系统启动的应用程序</string>
    <string name="empty_url">更新URL地址不能为空！</string>
    <string name="empty_password_old">旧密码不能为空。</string>
    <string name="empty_password_new">新密码不能为空。</string>
    <string name="password_inconformity">两新密码不一致。</string>
    <string name="empty_password_tips">必须选择密码提示问题。</string>
    <string name="empty_password_answer">密码提示答案不能为空，以便找回答案。</string>
    <string name="assword_modification_success">密码修改成功。</string>
    <string name="assword_modification_fail">密码修改失败。</string>
    <string name="password_old_error">旧密码不正确。</string>
    <string name="main_menu">主菜单</string>
    <string name="document_scan">扫描单据</string>
    <string name="goods_scan">盘点扫描</string>
    <string name="goods_query">单品查询</string>
    <string name="modified_quantity">修改数量</string>
    <string name="summary_statistics">汇总统计</string>
    <string name="query_title">查询</string>
    <string name="query_inventory">盘点查询</string>
    <string name="query_outstock">出库查询</string>
    <string name="query_instock">入库查询</string>
    <string name="scan_sequence_query">扫描顺序查询</string>
    <string name="basic_data_query">基础数据查询</string>
    <string name="inventory_export">数据导出</string>
    <string name="inventory_export2">盘点导出</string>
    <string name="export_inventory">导出数据</string>
    <string name="delete_data">删除数据</string>
    <string name="data_delete">数据删除</string>
    <string name="data_import">数据导入</string>
    <string name="system_settings">系统设置</string>
    <string name="parameter_settings">参数设置</string>
    <string name="other_settings">其他设置</string>
    <string name="field_name_settings">字段名称设置</string>
    <string name="export_import_settings">导入导出</string>
    <string name="system_update_settings">系统升级</string>
    <string name="naming_method_select">命名方式选择</string>
    <string name="export_directory_select">导出目录选择</string>
    <string name="import_file_select">导入文件选择</string>
    <string name="tv_store_in">入库</string>
    <string name="tv_store_out">出库</string>
    <string name="bar_store_in">入库单据</string>
    <string name="tv_store_in_num">已入库数量</string>
    <string name="bar_store_out">出库单据</string>
    <string name="tv_store_out_num">已出库数量</string>
    <string name="instock_no_inventory_data">无入库数据！</string>
	<string name="outstock_no_inventory_data">无出库数据！</string>
	<string name="warning">警告 </string>
	<string name="barCode_not_empty">条码不能为空 !</string>
	<string name="barCode_not_exist">无此条码!</string>
	<string name="no_inventory_data">无盘点数据！</string>
	<string name="no_inventory_detailed_data">无盘点明细数据！</string>
	<string name="no_inventoried_goods">不存在该已盘点货品!</string>
	<string name="enter_password">请输入管理员密码</string>
	<string name="not_modified_empty">不能修改为空</string>
	<string name="modify_successed">修改成功</string>
	<string name="error">错误</string>
	<string name="modify">修改</string>
	<string name="file_not_found">未找到数据文件，&#010;请将文件放到指定目录!</string>
	<string name="exit_application">是否退出应用程序？</string>
	<string name="modify_password">修改密码 </string>
	<string name="enter_quantity">输入数量</string>
	<string name="please_enter_quantity">请输入数量</string>
	<string name="modify_quantity">修改数量</string>
	<string name="modify_quantity_after">修改后数量</string>
	<string name="quantity_not_null">数量不能为空!</string>
	<string name="digit_system_one">小数点后位数系统设置为只能输入1位，请输入至多1位。</string>
	<string name="digit_system_two">小数点后位数系统设置为只能输入2位，请输入至多2位。</string>
	<string name="decimal_error">小数输入错误 !</string>
	<string name="quantity_error">数量输入有误，请检查。</string>
	<string name="password_empty">密码不能为空。</string>
	<string name="password_error">密码错误，请重新输入 !</string>
	<string name="enter_administrator">恭喜您启用超级管理员权限成功。\n\n确定后进入系统设置模块。</string>
	<string name="enter_administrator_scan_good">恭喜您启用超级管理员权限成功。</string>
	<string name="is_root_directory">已经是根目录!</string>
	<string name="confirm_again">请再次确认要保存吗？</string>
	<string name="sure_save">请确认是否要保存当前配置并隐藏相关的配置功能？\n请注意：保存配置功能后将不能再行配置,同时保存配置时会删除当前系统的所有盘点数据。</string>
	<string name="scan_settings">扫描设置</string>
	<string name="please_wait">请稍等</string>
	<string name="length_settings">长度设置</string>
	<string name="length_limit_mode">长度限制方式：</string>
	<string name="length_equal">等于限制（为0表示不设置该项）：</string>
	<string name="range_limit">范围限制：</string>
	<string name="small_value">小值:</string>
	<string name="large_value">大值:</string>
	<string name="intercept_save_code">截取或保留条码：</string>
	<string name="reserved_digit">保留位数</string>
	<string name="setting1">设置系统门店编号：</string>
	<string name="setting2">系统客户名称设置：</string>
	<string name="setting3">自动弹出时间设置：</string>
	<string name="setting4">盘点是否关闭WIFI：</string>
	<string name="setting5">删除数据管理单位： </string>
	<string name="setting6">删除数据密码控制：</string>
	<string name="setting7">退出系统密码控制：</string>
	<string name="setting8">管理员 密 码 修 改：</string>
	<string name="setting9">修改密码</string>
	<string name="control1">是否导出表头：</string>
	<string name="control2">导出扫描顺序：</string>
	<string name="control3">导出管理单位：</string>
	<string name="control4">导出文件类型：</string>
	<string name="control5">导出时是否合并导出：</string>
	<string name="control6">导出盘点单文件命名方式：</string>
	<string name="control7">数量拆分导出：</string>
	<string name="control8">资料导入方式：</string>
	<string name="control9">导出方式：</string>
	<string name="option">选项</string>
	<string name="display_item_selection">显示项选择 </string>
	<string name="display_item_note">请注意：最多只能选择5项 </string>
	<string name="cancel_all">全部取消 </string>
	<string name="scan1">条码验证方式：</string>
	<string name="scan2">启用唯一条码：</string>
	<string name="scan3">是否输入数量：</string>
	<string name="scan4">修改数量密码：</string>
	<string name="scan5">扫描显示方式：</string>
	<string name="scan6">内部或外部码：</string>
	<string name="scan7">扫描显示行数：</string>
	<string name="old_password">旧  密  码：</string>
	<string name="enter_old_password">请输入旧密码</string>
	<string name="new_password">新  密  码：</string>
	<string name="enter_new_password">请输入新密码 </string>
	<string name="confirm_password">确认新密码：</string>
	<string name="confirm_password_again">再次确认新密码</string>
	<string name="password_prompt">密码提示</string>
	<string name="question">提示问题：</string>
	<string name="answer">答        案：</string>
	<string name="enter_answer">请输入答案</string>
	<string name="cannot_empty">不能为空。 </string>
	<string name="document_empty"> 为空！是否继续添加当前盘点单据？</string>
	<string name="please_enter">请输入  </string>
	<string name="newly_added">新增 </string>
	<string name="document_exists">已经存在该盘点单据（确定续盘）？</string>
	<string name="document_ruku_exists">已经存在该入库单据（确定续盘）？</string>
	<string name="document_chuku_exists">已经存在该出库单据（确定续盘）？</string>
	<string name="number_tv">编号:</string>
	<string name="location_tv">货位:</string>
	<string name="barcode_tv">条码：</string>
	<string name="cut">消减</string>
	<string name="name_tv">名称：</string>
	<string name="color_tv">颜色：</string>
	<string name="size_id_tv">尺码ID：</string>
	<string name="major_tv">大类：</string>
	<string name="small_tv">小类：</string>
	<string name="price_tv">价格：</string>
	<string name="size_tv">尺码：</string>
	<string name="stock_tv">库存：</string>
	<string name="no_tv">货号：</string>
	<string name="girard_tv">款号：</string>
	<string name="color_id_tv">颜色ID：</string>
	<string name="number_quantity_tv">编号数量：</string>
	<string name="location_quantity_tv">货位数量：</string>
	<string name="cut_change_tv">消减切换</string>
	<string name="had_inventory_quantity">已盘数量：</string>
	<string name="enter_number">请输入编号</string>
	<string name="enter_location">请输入货位</string>
	<string name="add_number_location">新增编号</string>
	<string name="quantity_tv">数量：</string>
	<string name="display_options">显示选项</string>
	<string name="version1">版本</string>
	<string name="versionV">软件版本：V</string>
	<string name="version_latest">当前版本为最新</string>
	<string name="version_new">有新版本，是否下载更新？</string>
	<string name="version_downloading">正在下载，请稍候...</string>
	<string name="version_Checking">正在检查版本，请稍候...</string>
	<string name="version_downloading_failed">下载文件失败！</string>
	<string name="version_user_has_downloading">用户信息今天已下载，是否重新下载？</string>
	<string name="version_warehouse_has_downloading">库房信息今天已下载，是否重新下载？</string>
	<string name="not_registered">盘点机未注册成功,请稍后尝试！</string>
	<string name="network_timeout">联网超时 </string>
	<string name="network_failed">网络连接失败，您可继续尝试上报</string>
	<string name="version_error">出错了:</string>
	<string name="version_package_error">需要更新的包名跟程序包名不一致！</string>
	<string name="version_needs_updated">系统需要更新，是否现在更新？</string>
	<string name="version_parsing_failed">解析文件失败！</string>
	<string name="version_server_failed">解析服务端应答消息出错！</string>
	<string name="download_failed">下载失败</string>
	<string name="setting_before_import">完成导入设置才可以导入资料！</string>
	<string name="configure_import_items">请先配置导入项。</string>
	<string name="exception_when_underlying_data">预处理基础资料表时发生异常。</string>
	<string name="import_data_success">导入基础资料成功！</string>
	<string name="data_not_found">未找到数据文件，请将文件放到指定目录！</string>
	<string name="import_error">导入出错，导入基础资料有重复记录。</string>
	<string name="import_error_columns">导入列数与系统设置列数不一致！导入失败！</string>
	<string name="import_error_content">导入出错，请检查文件格式或数据内容等是否正确。</string>
	<string name="import_data">正在导入数据,请稍等...</string>
	<string name="not_configured">您还未配置完成，只有配置完成并保存后才能进行扫描相关工作。</string>
	<string name="import_basic_data">是否要导入基础资料?</string>
	<string name="offline_import">离线本地导入</string>
	<string name="import_btn">导入</string>
	<string name="scan_display">扫描显示</string>
    <string name="filename_inventory">盘点命名方式</string>
    <string name="filename_instock">入库命名方式</string>
    <string name="filename_outstock">出库命名方式</string>
    <string name="old_field">原字段名称：</string>
    <string name="new_field">新字段名称：</string>
    <string name="enter_new_field">请输入新的字段名称</string>
</resources>