<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_bg"
        android:orientation="horizontal"
        android:paddingBottom="5dip"
        android:paddingTop="5dip" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:paddingLeft="40dip"
            android:text="@string/option"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/textsize20" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:text="@string/display_item_selection"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/textsize20" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/view" />

    <ListView
        android:id="@+id/listview_display"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:divider="@color/view"
        android:dividerHeight="1dip" >
    </ListView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dip"
        android:background="@color/gray_bg"
        android:padding="5dip"
        android:text="@string/display_item_note"
        android:textColor="@color/red_dark_text"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_90"
        android:gravity="center"
        android:background="@color/title_bg"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/btn_select_yellow"
            android:padding="8dp"
            android:text="@string/cancel_all"
            android:textSize="@dimen/textsize24"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="40dp"
            android:layout_weight="1"
            android:background="@drawable/btn_select_yellow"
            android:padding="8dp"
            android:text="@string/save"
            android:textSize="@dimen/textsize24"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>