<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_60"
        android:padding="5dp"
        android:textColor="@color/bulue1"
        android:textSize="22sp"
        android:gravity="center"
        android:text="@string/enter_new_field"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/view"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_60"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/old_field"
            android:textSize="@dimen/textsize18"/>

        <TextView
            android:id="@+id/tv_original_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:textSize="@dimen/textsize18"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/view"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_60"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/new_field"
            android:textSize="@dimen/textsize18"/>

        <EditText
            android:id="@+id/et_newfield"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edittext_normal"
            android:imeOptions="actionDone"
            android:padding="5dp"
            android:textSize="@dimen/textsize18"
            android:singleLine="true"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/view"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_60"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/btn_select_yellow"
            android:padding="8dp"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize20"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/btn_select_yellow"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize20"/>
    </LinearLayout>
</LinearLayout>
