<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:layout_marginRight="5dp"
    android:background="@color/white">


    <TextView 
        android:id="@+id/tv_inventory_prefix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/layout_padding"
        android:paddingBottom="@dimen/layout_padding"
        android:text="@string/filename_inventory"
        android:textSize="@dimen/textsize22"
        android:textColor="@color/gray"
        android:gravity="center_horizontal"
        />
    
        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/view" />
    <TextView 
        android:id="@+id/tv_instock_prefix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/layout_padding"
        android:paddingBottom="@dimen/layout_padding"
        android:textColor="@color/gray"
        android:text="@string/filename_instock"
        android:textSize="@dimen/textsize22"
        android:gravity="center_horizontal"
        />
    
        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/view" />
    <TextView 
        android:id="@+id/tv_outstock_prefix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/layout_padding"
        android:paddingBottom="@dimen/layout_padding"
        android:textColor="@color/gray"
        android:text="@string/filename_outstock"
        android:textSize="@dimen/textsize22"
        android:gravity="center_horizontal"
        />
</LinearLayout>
